--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "althinect/filament-spatie-roles-permissions": "^2.2",
         "filament/filament": "^3.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "saade/filament-fullcalendar": "^3.0"
+        "saade/filament-fullcalendar": "^3.0",
+        "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
