--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "rupadana/filament-announce": "^3.1",
         "saade/filament-fullcalendar": "^3.0",
         "spatie/laravel-permission": "^6.3"
     },
