--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "require": {
         "php": "^8.1",
         "althinect/filament-spatie-roles-permissions": "^2.2",
+        "bezhansalleh/filament-shield": "^3.1",
         "filament/filament": "^3.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "parallax/filament-comments": "^1.1",
         "rupadana/filament-announce": "^3.1",
         "saade/filament-fullcalendar": "^3.0",
         "spatie/laravel-permission": "^6.3"
